--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,12 @@ dependencies {
     // kakao SDK module setting
     implementation "com.kakao.sdk:v2-all:2.15.0" // 전체 모듈 설치, 2.11.0 버전부터 지원
 
+    // Retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
+
     // indicators
 //    implementation 'com.tbuonomo:dotsindicator:5.0'
 }
